# walletdna

./: .env.example  .gitignore  .mcp.json  CLAUDE.md  Dockerfile.api  README.md  alembic.ini  docker-compose.yml  pyproject.toml
.claude/: settings.local.json
agents/: orchestrator.py  state.py
agents/classify/: agent.py  clustering.py  copytrade.py  sybil.py
agents/feature/: agent.py  graph.py  protocol.py  temporal.py  transaction.py
agents/ingest/: agent.py  alchemy.py  bitquery.py  helius.py  normalizer.py
agents/score/: agent.py  archetype_mapper.py  dimension_scorer.py  summary_generator.py
alembic/: env.py
alembic/versions/: 20260325_0000_001_initial_schema.py
api/: config.py  dependencies.py  main.py
api/middleware/: auth.py  logging.py
api/models/: schemas.py  user.py  wallet.py
api/routers/: archetypes.py  auth.py  batch.py  wallet.py
api/services/: cache.py  rate_limiter.py
dashboard/: next.config.js  package-lock.json  package.json  tailwind.config.ts  tsconfig.json  tsconfig.tsbuildinfo
dashboard/app/: globals.css  layout.tsx  page.tsx
dashboard/app/api/og/: route.tsx
dashboard/app/compare/: page.tsx
dashboard/app/wallet/[address]/: page.tsx
dashboard/components/: ArchetypeBadge.tsx  BehavioralTimeline.tsx  DimensionBar.tsx  NavBar.tsx  PersonalityCard.tsx  RadarChart.tsx  TransactionHeatmap.tsx  WalletSearch.tsx
dashboard/lib/: api.ts  types.ts
docs/: AGENTS.md  PRD.md  RESEARCH.md
ml/: evaluate.py  seed_dataset.py  train.py
scripts/: backfill.py  benchmark.py  create_dev_key.py  seed_wallets.py  setup_dev.sh  worker.py
scripts/intel/: intel_mcp_server.py
tests/: test_agents.py  test_api.py
