[project]
name = "walletdna"
version = "0.1.0"
description = "On-chain personality profiling platform — Myers-Briggs for Wallets"
requires-python = ">=3.12"
dependencies = [
    # Web framework
    "fastapi>=0.115.0",
    "uvicorn[standard]>=0.30.0",
    "pydantic>=2.9.0",
    "pydantic-settings>=2.5.0",
    # Database
    "sqlalchemy[asyncio]>=2.0.36",
    "asyncpg>=0.29.0",
    "alembic>=1.13.0",
    # Cache
    "redis[asyncio]>=5.2.0",
    # HTTP
    "httpx>=0.27.0",
    # Agent orchestration
    "langgraph>=0.2.0",
    "langchain-anthropic>=0.3.0",
    "anthropic>=0.40.0",
    # ML
    "scikit-learn>=1.5.0",
    "hdbscan>=0.8.38",
    "networkx>=3.4.0",
    "python-louvain>=0.16",
    # Data
    "polars>=1.12.0",
    "numpy>=2.1.0",
    # Logging
    "structlog>=24.4.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.3.0",
    "pytest-asyncio>=0.24.0",
    "pytest-cov>=6.0.0",
    "mypy>=1.13.0",
    "ruff>=0.8.0",
    "httpx>=0.27.0",
]

[tool.ruff]
line-length = 100
target-version = "py312"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B", "SIM"]

[tool.mypy]
python_version = "3.12"
strict = true
plugins = ["pydantic.mypy"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["api", "agents", "ml"]
