[project]
name = "walletdna"
version = "0.1.0"
description = "On-Chain Personality API — Myers-Briggs for Wallets"
requires-python = ">=3.12"
dependencies = [
    # API Framework
    "fastapi>=0.115.0",
    "uvicorn[standard]>=0.30.0",
    "pydantic>=2.0.0",
    "pydantic-settings>=2.0.0",
    # Database
    "sqlalchemy[asyncio]>=2.0.0",
    "asyncpg>=0.30.0",
    "alembic>=1.13.0",
    # Cache & Queue
    "redis>=5.0.0",
    # HTTP
    "httpx>=0.27.0",
    # Agent Orchestration
    "langgraph>=0.2.0",
    "langchain-anthropic>=0.3.0",
    # AI
    "anthropic>=0.40.0",
    # ML & Data
    "scikit-learn>=1.5.0",
    "hdbscan>=0.8.0",
    "networkx>=3.3.0",
    "polars>=1.0.0",
    "numpy>=2.0.0",
    "scipy>=1.14.0",
    "joblib>=1.4.0",
    # Logging
    "structlog>=24.0.0",
    # Utils
    "python-dotenv>=1.0.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
    "pytest-asyncio>=0.24.0",
    "pytest-cov>=5.0.0",
    "mypy>=1.11.0",
    "ruff>=0.6.0",
    "httpx",  # For TestClient
]

[tool.ruff]
line-length = 100
target-version = "py312"

[tool.ruff.lint]
select = ["E", "F", "I", "N", "W", "UP", "ANN", "S", "B"]
ignore = ["ANN101", "ANN102", "S101"]

[tool.mypy]
python_version = "3.12"
strict = true
warn_return_any = true
warn_unused_configs = true

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
